# pymplate

./: LICENSE.md  README.md  README.org  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini  tox.toml  ty.toml
.ci/: run
.github/workflows/: main.yml  scheduled.yml
misc/: pyproject.toml
old/: setup.py
src/karlicoss_pymplate/: __init__.py  module.py
src/karlicoss_pymplate/subpackage/: __init__.py  submodule.py
tests/: test_pytest.py
tests/testdata/src/mypkg/: main.py
tests/testdata/src/mypkg/a/aa/: .main.py.swp  main.py
tests/testdata/src/mypkg/b/: for_aa.py
tests/testdata/src/mypkg/c/: __init__.py
